# accountant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
app/: config.py  db.py  main.py  routes.py  security.py
app/dashboards/: routes.py
app/expenses/: models.py  routes.py
app/static/css/: main.css
app/templates/: main.html
app/templates/dashboards/: main.html  table.html
app/templates/expenses/: create_form.html  expense_row.html  main.html  save_response.html  table.html  tbody.html
app/templates/shared/: _base.html  alert.html  notification.html
general_utils/: loggers.py  utils.py
migrations/models/: 0_20240217182313_init.py  0_20240304125724_init.py  1_20240226210726_update.py
tests/: conftest.py  test_main.py
